--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT = 3004
+SENHA = k4-sHlTh5AwFvYNDq15G9Pwx2nwEFL5s
+URL = postgres://txcqbtpv:k4-sHlTh5AwFvYNDq15G9Pwx2nwEFL5s@silly.db.elephantsql.com/txcqbtpv 
